# astock-quant-ai

./: .gitignore  CLAUDE.md
qmt_strategy/: README.md  pyproject.toml
qmt_strategy/qmt_strategy/: __init__.py
qmt_strategy/qmt_strategy/adapters/: __init__.py  xt_real.py
qmt_strategy/qmt_strategy/app/: __init__.py  main.py  run.py  scheduler.py
qmt_strategy/qmt_strategy/auction/: __init__.py  auction_factors.py  auction_poller.py  tick_source.py
qmt_strategy/qmt_strategy/common/: __init__.py  auction_window.py  board_rules.py  buy_prefilter.py  http_client.py  identity.py  logger.py  order_remark.py  time_utils.py  (+2 more)
qmt_strategy/tests/: conftest.py  test_adapters.py  test_app_engine.py  test_auction.py  test_auction_window.py  test_buy_prefilter.py  test_callbacks.py  test_connection_guard.py  test_connection_recovery.py  test_data_writer.py  test_decision_emitter.py  test_engine_sqlite.py  test_entry_router.py  test_http_client.py  test_http_ingest_repository.py  test_identity_board_universe.py  test_local_ledger.py  test_order_executor.py  test_position_manager.py  test_reconcile.py  test_repository.py  test_review_fixes.py  test_review_fixes_2026_06.py  test_risk.py  test_round1_stage_a.py  test_round2_stage_b.py  test_round4_stage_d.py  test_round5_stage_e.py  test_round6_guojin_hardening.py  test_round7_sell_chain.py  test_run_supervisor.py  test_scheduler.py  test_scheduler_prefetch.py  test_sell_decider.py  test_settings.py  test_snapshot_job.py  test_sqlite_ledger.py  test_sqlite_repository.py  test_storage_core.py  test_storage_review_fixes.py  (+7 more)
(+107 files in other folders)
